--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "watch-local": "spicetify-creator --watch --out=dist"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.5",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "spicetify-creator": "^1.0.3"
+  },
+  "dependencies": {
+    "classnames": "^2.3.1",
+    "lodash-es": "^4.17.21"
   }
 }
