chore: add power-bar.js dist

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Power bar",
     "description": "Spotlight-like quick search bar.",
     "preview": "docs/power-bar.png",
-    "main": "powerBar.js",
+    "main": "dist/power-bar.js",
     "readme": "README.md",
     "authors": [{ "name": "jeroentvb", "url": "https://github.com/jeroentvb" }]
 }
