--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "build": "spicetify-creator",
     "build-local": "spicetify-creator --out=dist --minify",
-    "watch": "spicetify-creator --watch",
-    "watch-local": "spicetify-creator --watch --out=dist"
+    "watch": "spicetify-creator --watch"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.5",
