--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   "scripts": {
     "build": "spicetify-creator",
     "build-local": "spicetify-creator --out=dist --minify",
-    "watch": "spicetify-creator --watch",
-    "watch-local": "spicetify-creator --watch --out=dist"
+    "watch": "spicetify-creator --watch"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.5",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "spicetify-creator": "^1.0.3"
+    "spicetify-creator": "^1.0.7"
   },
   "dependencies": {
     "classnames": "^2.3.1",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "spcr-settings": "^1.0.0"
   }
 }
