--- a/package.json
+++ b/package.json
@@ -2,24 +2,30 @@
   "name": "power-bar",
   "version": "1.0.1",
   "author": {
-    "name": "jeroentvb",
-    "url": "https://github.com/jeroentvb"
+      "name": "jeroentvb",
+      "url": "https://github.com/jeroentvb"
   },
   "private": true,
   "scripts": {
-    "build": "spicetify-creator",
-    "build-local": "spicetify-creator --out=dist --minify",
-    "watch": "spicetify-creator --watch"
+      "build": "spicetify-creator",
+      "build-local": "spicetify-creator --out=dist --minify",
+      "watch": "spicetify-creator --watch",
+      "lint": "eslint .",
+      "lint:fix": "eslint --fix --ext .ts,.tsx ."
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.5",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "spicetify-creator": "^1.0.7"
+      "@types/lodash-es": "^4.17.5",
+      "@types/react": "^17.0.39",
+      "@types/react-dom": "^17.0.11",
+      "@typescript-eslint/eslint-plugin": "^5.12.1",
+      "@typescript-eslint/parser": "^5.12.1",
+      "eslint": "^8.9.0",
+      "eslint-plugin-react": "^7.28.0",
+      "spicetify-creator": "^1.0.7"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
-    "lodash-es": "^4.17.21",
-    "spcr-settings": "^1.0.0"
+      "classnames": "^2.3.1",
+      "lodash-es": "^4.17.21",
+      "spcr-settings": "^1.0.0"
   }
 }
