--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     - name: npm install and build
       run: |
         npm ci
-        npm run build-local
+        npm run build:prod
 
     - name: Push new version
       uses: s0/git-publish-subdir-action@develop
