feat: add spcr-whats-new to show updates in a modal

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "power-bar",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": {
     "name": "jeroentvb",
     "url": "https://github.com/jeroentvb"
@@ -29,6 +29,8 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "lodash-es": "^4.17.21",
-    "spcr-settings": "^1.0.0"
+    "react-markdown": "^8.0.0",
+    "spcr-settings": "^1.0.0",
+    "spcr-whats-new": "^1.0.1"
   }
 }
