--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:fix": "eslint --fix --ext .ts,.tsx ."
   },
   "devDependencies": {
+    "@jeroentvb/eslint-config-typescript": "^1.3.0",
     "@types/lodash-es": "^4.17.5",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
