--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "classnames": "^2.3.1",
     "lodash-es": "^4.17.21",
     "react-markdown": "^8.0.0",
+    "spcr-error-notification": "^1.0.0",
     "spcr-settings": "^1.1.0",
     "spcr-whats-new": "^1.0.1"
   }
