--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/lodash-es": "^4.17.5",
     "@types/react": "^17.0.50",
     "@types/react-dom": "^17.0.17",
+    "@types/spotify-api": "^0.0.21",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "copyfiles": "^2.4.1",
